--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.1.0",
-    "@angular/common": "19.1.0",
-    "@angular/compiler": "19.1.0",
-    "@angular/core": "19.1.0",
-    "@angular/forms": "19.1.0",
-    "@angular/platform-browser": "19.1.0",
-    "@angular/platform-browser-dynamic": "19.1.0",
-    "@angular/router": "19.1.0",
+    "@angular/animations": "20.3.3",
+    "@angular/common": "20.3.3",
+    "@angular/compiler": "20.3.3",
+    "@angular/core": "20.3.3",
+    "@angular/forms": "20.3.3",
+    "@angular/platform-browser": "20.3.3",
+    "@angular/platform-browser-dynamic": "20.3.3",
+    "@angular/router": "20.3.3",
     "rxjs": "7.8.1",
     "tslib": "2.6.3",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.1.1",
     "@angular-eslint/builder": "18.4.0",
-    "@angular/cli": "19.1.1",
-    "@angular/compiler-cli": "19.1.0",
+    "@angular/build": "^20.3.4",
+    "@angular/cli": "20.3.4",
+    "@angular/compiler-cli": "20.3.3",
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
     "@playwright/test": "1.48.2",
@@ -71,6 +71,6 @@
     "stylelint": "16.10.0",
     "stylelint-config-standard-scss": "13.1.0",
     "tailwindcss": "3.4.14",
-    "typescript": "5.7.3"
+    "typescript": "5.9.3"
   }
 }
