--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "20.3.3",
     "@angular/platform-browser-dynamic": "20.3.3",
     "@angular/router": "20.3.3",
+    "@arcgis/core": "4.33.14",
     "rxjs": "7.8.1",
     "tslib": "2.6.3",
     "zone.js": "0.15.0"
