--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "20.3.3",
     "@angular/router": "20.3.3",
     "@arcgis/core": "4.33.14",
+    "@arcgis/map-components": "^4.33.24",
     "rxjs": "7.8.1",
     "tslib": "2.6.3",
     "zone.js": "0.15.0"
