--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "20.3.3",
     "@angular/platform-browser-dynamic": "20.3.3",
     "@angular/router": "20.3.3",
+    "@angular/service-worker": "20.3.3",
     "@arcgis/core": "4.33.14",
     "@arcgis/map-components": "^4.33.24",
     "rxjs": "7.8.1",
